# stacksats

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  backtest.py  btc_price_fetcher.py  export_weights.py  modal_app.py  model_development.py  model_development_yousef.py  plot_mvrv.py  plot_weights.py  prelude.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: package-check.yml
btc_api/: bitstamp_btc_usd.py  coinbase_btc_usd.py  coinmetrics_btc_csv.py  kraken_xbt_usd.py
docs/: README.md  app.md  commands.md  framework.md  model.md  model_backtest.md  model_yousef.md  release.md  validation_checklist.md
examples/: model_example.py  model_example_notebook.py
scripts/: check_docs_refs.sh  release_check.sh  test_example_commands.py
stacksats/: __init__.py  api.py  backtest.py  btc_price_fetcher.py  cli.py  data_btc.py  export_weights.py  framework_contract.py  loader.py  matplotlib_setup.py  modal_app.py  model_development.py  plot_mvrv.py  plot_weights.py  prelude.py  runner.py  strategy_types.py
stacksats/btc_api/: __init__.py  coingecko_btc_usd.py  coinmetrics_btc_csv.py
stacksats/strategies/: __init__.py  base.py  examples.py  mvrv.py
tests/: __init__.py  conftest.py  test_api_enhancements.py  test_artifact_schema.py  test_backtest_errors.py  test_backtest_export_parity.py  test_backtest_performance.py  test_bdd_backtest.py  test_bdd_consistency.py  test_bdd_data_integrity.py  test_bdd_database_operations.py  test_bdd_date_ranges.py  test_bdd_edge_cases.py  test_bdd_export_weights.py  test_bdd_forward_looking.py  test_bdd_golden_snapshots.py  test_bdd_model_development.py  test_bdd_weight_computation.py  test_bdd_weight_constraints.py  test_bdd_weight_stability.py  test_branch_data_fetch_export.py  test_branch_plot_modal.py  test_branch_runner_prelude_model.py  test_btc_api_scripts.py  test_btc_price_fetcher.py  test_btc_price_fetcher_historical.py  test_cli.py  test_cli_plotting_additional.py  test_coinmetrics_btc_csv.py  test_cross_validation.py  test_data_btc.py  test_debug_multiplier.py  test_debug_weights.py  test_export_weights_additional.py  test_export_weights_database.py  test_export_weights_detailed.py  test_framework_contract.py  test_framework_invariants.py  test_loader.py  test_main.py  (+23 more)
tests/bdd/features/: backtest.feature
tests/bdd/scenarios/: test_bdd_date_ranges.py  test_bdd_group_backtest.py  test_bdd_group_database.py  test_bdd_group_validation.py  test_bdd_group_weight.py
tests/bdd/step_defs/: backtest_steps.py
tests/features/: backtest.feature  consistency.feature  data_integrity.feature  database_operations.feature  date_ranges.feature  edge_cases.feature  export_weights.feature  forward_looking.feature  golden_snapshots.feature  model_development.feature  weight_computation.feature  weight_constraints.feature  weight_stability.feature
tests/integration/backtest/: test_backtest_errors.py  test_backtest_export_parity.py  test_market_regimes.py  test_simulation.py  test_statistical_validation.py
tests/performance/: test_backtest_performance.py
tests/snapshots/: backtest_result_schema.json
tests/step_defs/: __init__.py  backtest_steps.py  common_steps.py  database_steps.py  validation_steps.py  weight_steps.py
tests/unit/core/: test_framework_contract.py  test_runner_additional.py  test_strategy_types_additional.py
tests/unit/data/: test_coinmetrics_btc_csv.py  test_data_btc.py
tests/unit/model/: test_branch_runner_prelude_model.py
tests/unit/runtime/: test_branch_plot_runtime.py  test_plot_mvrv_additional.py  test_plot_weights_helpers.py
