[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stacksats"
dynamic = ["version"]
description = "Bitcoin DCA model development, backtesting, and Modal deployment toolkit"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "StackSats Contributors" }]
maintainers = [{ name = "StackSats Maintainers", email = "team@hypertrial.ai" }]
keywords = ["bitcoin", "dca", "backtesting", "quant", "crypto"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scipy>=1.11.0",
  "requests>=2.31.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "tenacity>=8.2.0",
]

[project.urls]
Homepage = "https://github.com/hypertrial/stacksats"
Repository = "https://github.com/hypertrial/stacksats"
Documentation = "https://github.com/hypertrial/stacksats/tree/main/docs"
Issues = "https://github.com/hypertrial/stacksats/issues"
Changelog = "https://github.com/hypertrial/stacksats/blob/main/CHANGELOG.md"
Security = "https://github.com/hypertrial/stacksats/security/policy"

[project.optional-dependencies]
deploy = [
  "modal>=0.52.0",
  "psycopg2-binary>=2.9.0",
  "fastapi>=0.104.0",
  "python-dotenv>=1.0.0",
  "pyarrow>=13.0.0",
]
dev = [
  "pytest>=7.0.0",
  "pytest-bdd>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
  "pytest-benchmark>=4.0.0",
  "pytest-xdist>=3.0.0",
  "responses>=0.23.0",
  "freezegun>=1.2.0",
  "hypothesis>=6.0.0",
  "ruff>=0.1.0",
  "vulture",
]

[project.scripts]
stacksats = "stacksats.cli:main"
stacksats-plot-mvrv = "stacksats.plot_mvrv:main"
stacksats-plot-weights = "stacksats.plot_weights:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stacksats", "stacksats.*"]

[tool.setuptools.package-data]
stacksats = ["py.typed"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
